[gd_scene format=3 uid="uid://d30yqy8wiye5i"]

[ext_resource type="Script" uid="uid://bnyff1r2exkmv" path="res://Refactor/scripts/start_menu.gd" id="1_bwyd4"]
[ext_resource type="Theme" uid="uid://dqqaua4my3ejj" path="res://Themes/default.tres" id="2_yr8ux"]
[ext_resource type="FontFile" uid="uid://cgp1e0xbo3x8n" path="res://Assets/Fonts/Poppins-Bold.ttf" id="3_rp0pw"]
[ext_resource type="Shader" uid="uid://8rmrr6mh67ra" path="res://Shaders/Blur.gdshader" id="4_r66qc"]
[ext_resource type="PackedScene" uid="uid://blmnss33r7uw2" path="res://Refactor/scenes/settings_menu.tscn" id="5_kbw71"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l3vcq"]
shader = ExtResource("4_r66qc")
shader_parameter/blur_amount = 1.5

[node name="StartMenu" type="Control" unique_id=448957499]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwyd4")

[node name="BackgroundRect" type="ColorRect" parent="." unique_id=1759286130]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8732984, 0.8732984, 0.8732984, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2050893132]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -109.0
offset_right = 112.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12

[node name="NewGameButton" type="Button" parent="VBoxContainer" unique_id=1350174621]
layout_mode = 2
theme = ExtResource("2_yr8ux")
text = "New Game"

[node name="ResumeGameButton" type="Button" parent="VBoxContainer" unique_id=678621163]
layout_mode = 2
theme = ExtResource("2_yr8ux")
disabled = true
text = "Resume Game"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer" unique_id=400728497]
layout_mode = 2
theme = ExtResource("2_yr8ux")
text = "Join Multiplayer"

[node name="SettingsButton" type="Button" parent="VBoxContainer" unique_id=2093368313]
layout_mode = 2
theme = ExtResource("2_yr8ux")
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer" unique_id=1305840168]
layout_mode = 2
theme = ExtResource("2_yr8ux")
text = "Quit"

[node name="TitleLabel" type="Label" parent="." unique_id=1116790288]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -394.5
offset_top = 32.0
offset_right = 394.5
offset_bottom = 318.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.827451, 0.49411765, 0.4745098, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_rp0pw")
theme_override_font_sizes/font_size = 208
text = "Godoku"

[node name="BlurRect" type="ColorRect" parent="." unique_id=1369406057]
visible = false
material = SubResource("ShaderMaterial_l3vcq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" parent="." unique_id=1967479882 instance=ExtResource("5_kbw71")]
visible = false
layout_mode = 1

[node name="MultiplayerPanel" type="Panel" parent="." unique_id=2048508655]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 366.0
offset_top = 56.0
offset_right = -368.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yr8ux")

[node name="MarginContainer" type="MarginContainer" parent="MultiplayerPanel" unique_id=1361396481]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="MultiplayerPanel/MarginContainer" unique_id=2113324293]
layout_mode = 2

[node name="Label" type="Label" parent="MultiplayerPanel/MarginContainer/VBoxContainer2" unique_id=1117641286]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Multiplayer"

[node name="VBoxContainer3" type="VBoxContainer" parent="MultiplayerPanel/MarginContainer/VBoxContainer2" unique_id=1020852091]
layout_mode = 2

[node name="Label" type="Label" parent="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer3" unique_id=920017235]
layout_mode = 2
size_flags_horizontal = 4
text = "Join Friends Game"

[node name="JoinGameButton" type="Button" parent="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer3" unique_id=2134534560]
layout_mode = 2
text = "Join Game"

[node name="Label2" type="Label" parent="MultiplayerPanel/MarginContainer/VBoxContainer2" unique_id=2005000188]
layout_mode = 2
size_flags_horizontal = 4
text = "OR"

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerPanel/MarginContainer/VBoxContainer2" unique_id=52990067]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer" unique_id=985374712]
layout_mode = 2
size_flags_horizontal = 4
text = "Enter Invite Link"

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer" unique_id=1200864775]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CodeLineEdit" type="LineEdit" parent="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer" unique_id=115565220]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter code"
editable = false
virtual_keyboard_enabled = false
secret = true

[node name="ShowCodeButton" type="Button" parent="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer" unique_id=1756327498]
layout_mode = 2
text = "Show"

[node name="PasteCodeButton" type="Button" parent="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer" unique_id=428317563]
layout_mode = 2
text = "Paste"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="toggle_multiplayer_visibility" binds= [true]]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="Settings" method="display_settings" binds= [true]]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/ShowCodeButton" to="." method="toggle_code_visibility"]
[connection signal="pressed" from="MultiplayerPanel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/PasteCodeButton" to="." method="paste_code"]
